2007-01-10  Pema Geyleg  <pema.geyleg@gmail.com>

	* configure.in: Added 'dz' to ALL_LINGUAS.

2006-12-28  Mamoru Tasaka <mtasaka@ioa.s.u-tokyo.ac.jp>

	* data/gnome-commander.spec.in:
	Clean up

2006-12-21  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-list-popmenu.c:
	* src/gnome-cmd-main-win.c:
	Use GNOMEUIINFO_* helpers

2006-12-20  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-prepare-copy-dialog.c:
	* src/gnome-cmd-prepare-move-dialog.c:
	* src/gnome-cmd-xfer.c:
	* src/utils.c:
	Set default action to 'Replace' for overwriting confirmation dialog
	The dialog can be closed with ESC now

2006-12-18  Koos Jan Niesink  <kjniesink@yahoo.co.uk>

	* src/gnome-cmd-file-list.c:
	Prevent gcmd from editing dirs

2006-12-18  Henry Yonathan <henry.yonathan@gmail.com>

	* src/gnome-cmd-main-win.c:
	Added shortcut CTRL+\ as 'Go to the root dir'
	Added shortcut CTRL+` as 'Go to the home dir'

2006-12-17  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in:
	* data/gnome-commander.spec.in:
	Use version requirements for rpm from configure.in

2006-12-17  Stephanos Manos <stefmanos@gmail.com>

	* data/gnome-commander.spec.in:
	Removed unnecessary .a libs from rpm
	Added dependencies for optional libs

2006-12-14  Henry Yonathan <henry.yonathan@gmail.com>

	* src/gnome-cmd-file-list.c:
	Prevent int-viewer from opening dirs

2006-12-12  Stephanos Manos <stefmanos@gmail.com>

	* data/gnome-commander.spec.in:
	Minor cleanups/fixes to make rpmlint silent

2006-12-12  sstanev <sstanev@narod.ru>

	* configure.in: Added bg in ALL_LINGUAS

2006-12-11  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in: Bumped version to 1.2.4



##############################################################################
#                                   1.2.3                                    #
##############################################################################

2006-12-11  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in: Bumped version to 1.2.3

	* src/gnome-cmd-mkdir-dialog.c: