@@ -4867,6 +4867,9 @@
                             <para>Fixed problem with editing dirs by gcmd</para>
                         </listitem>
                         <listitem>
+                            <para>Fixed problem #371948 and #388970 (file path not escaped)</para>
+                        </listitem>
+                        <listitem>
                             <para>Build fixes</para>
                         </listitem>
                     </itemizedlist>
